SENG-982 Add cross-platform installer packaging